Criação da API de filtrar recebedor