@@ -1,25 +1,23 @@
 package br.com.softsy.pagarme.controller;
 
-import java.net.URI;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import br.com.softsy.pagarme.dto.RecebedorTempDTO;
 import br.com.softsy.pagarme.model.RecebedorTemp;
@@ -37,7 +35,9 @@ public class RecebedorTempController {
 
 		List<RecebedorTemp> lista = service.listarTudo();
 
-		List<Map<String, Object>> respostaFormatada = lista.stream().map(service::formatarRecebedorTemp).toList();
+		List<Map<String, Object>> respostaFormatada = lista.stream()
+			    .map(service::formatarRecebedorTemp)
+			    .collect(Collectors.toList());
 
 		Map<String, Object> respostaFinal = new LinkedHashMap<>();
 		respostaFinal.put("mensagem", "Dados encontrados:");
@@ -57,7 +57,7 @@ public class RecebedorTempController {
 		Map<String, Object> respostaFinal = new LinkedHashMap<>();
 		respostaFinal.put("mensagem", "Recebedor inserido com sucesso!");
 		respostaFinal.put("quantidade", 1);
-		respostaFinal.put("dados", List.of(service.formatarRecebedorTemp(recebedorCriado)));
+		respostaFinal.put("dados", service.formatarRecebedorTemp(recebedorCriado));
 
 		return ResponseEntity.ok(respostaFinal);
 	}
@@ -70,7 +70,8 @@ public class RecebedorTempController {
 			Map<String, Object> resposta = service.obterRecebedorTemp(idConta, idRecebedorTemp);
 			return ResponseEntity.ok(resposta);
 		} catch (IllegalArgumentException e) {
-			return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("mensagem", e.getMessage()));
+			return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+				    .body(Collections.singletonMap("mensagem", e.getMessage()));
 		}
 	}
 
